dfagame/PDDLparser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> pddl
Rule 1     pddl -> domain
Rule 2     pddl -> problem
Rule 3     domain -> LPAREN DEFINE_KEY domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
Rule 4     domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
Rule 5     problem -> LPAREN DEFINE_KEY problem_def domain_pdef objects_def init_def goal_def RPAREN
Rule 6     domain_pdef -> LPAREN DOMAIN_PKEY NAME RPAREN
Rule 7     domain_def -> LPAREN DOMAIN_KEY NAME RPAREN
Rule 8     problem_def -> LPAREN PROBLEM_KEY NAME RPAREN
Rule 9     objects_def -> LPAREN OBJECTS_KEY typed_constants_lst RPAREN
Rule 10    init_def -> LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 11    init_def -> LPAREN INIT_KEY ground_predicates_lst RPAREN
Rule 12    goal_def -> LPAREN GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 13    require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
Rule 14    require_key_lst -> require_key require_key_lst
Rule 15    require_key_lst -> require_key
Rule 16    require_key -> STRIPS_KEY
Rule 17    require_key -> EQUALITY_KEY
Rule 18    require_key -> TYPING_KEY
Rule 19    require_key -> ADL_KEY
Rule 20    require_key -> ND_KEY
Rule 21    types_def -> LPAREN TYPES_KEY names_lst RPAREN
Rule 22    constants_def -> LPAREN CONSTANTS_KEY typed_constants_lst RPAREN
Rule 23    constants_def -> LPAREN CONSTANTS_KEY names_lst RPAREN
Rule 24    names_lst -> NAME names_lst
Rule 25    names_lst -> NAME
Rule 26    predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN
Rule 27    predicate_def_lst -> predicate_def predicate_def_lst
Rule 28    predicate_def_lst -> predicate_def
Rule 29    predicate_def -> LPAREN NAME typed_variables_lst RPAREN
Rule 30    predicate_def -> LPAREN NAME RPAREN
Rule 31    ground_predicates_lst -> ground_predicate ground_predicates_lst
Rule 32    ground_predicates_lst -> ground_predicate
Rule 33    ground_predicate -> LPAREN NAME constants_lst RPAREN
Rule 34    ground_predicate -> LPAREN NAME RPAREN
Rule 35    constants_lst -> constant constants_lst
Rule 36    constants_lst -> constant
Rule 37    typed_constants_lst -> constants_lst HYPHEN type typed_constants_lst
Rule 38    typed_constants_lst -> constants_lst HYPHEN type
Rule 39    action_def_lst -> action_def action_def_lst
Rule 40    action_def_lst -> action_def
Rule 41    action_def -> LPAREN ACTION_KEY NAME parameters_def precond_def effects_def RPAREN
Rule 42    parameters_def -> PARAMETERS_KEY LPAREN typed_variables_lst RPAREN
Rule 43    parameters_def -> PARAMETERS_KEY LPAREN RPAREN
Rule 44    precond_def -> PRECONDITION_KEY LPAREN formula RPAREN
Rule 45    formula -> literal
Rule 46    formula -> AND_KEY formula_lst
Rule 47    formula -> OR_KEY formula_lst
Rule 48    formula -> NOT_KEY formula
Rule 49    formula -> IMPLY_KEY formula formula
Rule 50    formula -> EXISTS_KEY LPAREN typed_variables_lst RPAREN formula
Rule 51    formula -> FORALL_KEY LPAREN typed_variables_lst RPAREN formula
Rule 52    formula -> LPAREN AND_KEY formula_lst RPAREN
Rule 53    formula -> LPAREN OR_KEY formula_lst RPAREN
Rule 54    formula -> LPAREN NOT_KEY formula RPAREN
Rule 55    formula -> LPAREN IMPLY_KEY formula formula RPAREN
Rule 56    formula -> LPAREN literal RPAREN
Rule 57    formula -> LPAREN EXISTS_KEY LPAREN typed_variables_lst RPAREN formula RPAREN
Rule 58    formula -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN formula RPAREN
Rule 59    formula_lst -> formula formula_lst
Rule 60    formula_lst -> formula
Rule 61    effects_def -> EFFECT_KEY LPAREN one_eff_formula RPAREN
Rule 62    one_eff_formula -> literal
Rule 63    one_eff_formula -> AND_KEY one_eff_formula_lst
Rule 64    one_eff_formula -> ONEOF_KEY atomic_eff_lst
Rule 65    one_eff_formula -> WHEN_KEY formula atomic_eff
Rule 66    one_eff_formula -> LPAREN ONEOF_KEY atomic_eff_lst RPAREN
Rule 67    one_eff_formula -> LPAREN WHEN_KEY formula atomic_eff RPAREN
Rule 68    one_eff_formula -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN atomic_eff RPAREN
Rule 69    one_eff_formula -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN LPAREN WHEN_KEY formula atomic_eff RPAREN RPAREN
Rule 70    one_eff_formula_lst -> one_eff_formula one_eff_formula_lst
Rule 71    one_eff_formula_lst -> one_eff_formula
Rule 72    atomic_eff_lst -> atomic_eff atomic_eff_lst
Rule 73    atomic_eff_lst -> atomic_eff
Rule 74    atomic_eff -> literal
Rule 75    atomic_eff -> AND_KEY literal_lst
Rule 76    atomic_eff -> LPAREN AND_KEY literal_lst RPAREN
Rule 77    atomic_eff -> LPAREN WHEN_KEY formula atomic_eff RPAREN
Rule 78    literal_lst -> literal literal_lst
Rule 79    literal_lst -> literal
Rule 80    literal -> LPAREN NOT_KEY predicate RPAREN
Rule 81    literal -> predicate
Rule 82    predicate -> LPAREN NAME variables_lst RPAREN
Rule 83    predicate -> LPAREN EQUALS VARIABLE VARIABLE RPAREN
Rule 84    predicate -> LPAREN NAME RPAREN
Rule 85    predicate -> NAME variables_lst
Rule 86    predicate -> EQUALS VARIABLE VARIABLE
Rule 87    predicate -> NAME
Rule 88    typed_variables_lst -> variables_lst HYPHEN type typed_variables_lst
Rule 89    typed_variables_lst -> variables_lst HYPHEN type
Rule 90    variables_lst -> VARIABLE variables_lst
Rule 91    variables_lst -> VARIABLE
Rule 92    type -> NAME
Rule 93    constant -> NAME

Terminals, with rules where they appear

ACTION_KEY           : 41
ADL_KEY              : 19
AND_KEY              : 10 12 46 52 63 75 76
CONSTANTS_KEY        : 22 23
DEFINE_KEY           : 3 4 5
DOMAIN_KEY           : 7
DOMAIN_PKEY          : 6
EFFECT_KEY           : 61
EQUALITY_KEY         : 17
EQUALS               : 83 86
EXISTS_KEY           : 50 57
FORALL_KEY           : 51 58 68 69
GOAL_KEY             : 12
HYPHEN               : 37 38 88 89
IMPLY_KEY            : 49 55
INIT_KEY             : 10 11
LPAREN               : 3 4 5 6 7 8 9 10 10 11 12 12 13 21 22 23 26 29 30 33 34 41 42 43 44 50 51 52 53 54 55 56 57 57 58 58 61 66 67 68 68 69 69 69 76 77 80 82 83 84
NAME                 : 6 7 8 24 25 29 30 33 34 41 82 84 85 87 92 93
ND_KEY               : 20
NOT_KEY              : 48 54 80
OBJECTS_KEY          : 9
ONEOF_KEY            : 64 66
OR_KEY               : 47 53
PARAMETERS_KEY       : 42 43
PRECONDITION_KEY     : 44
PREDICATES_KEY       : 26
PROBLEM_KEY          : 8
REQUIREMENTS_KEY     : 13
RPAREN               : 3 4 5 6 7 8 9 10 10 11 12 12 13 21 22 23 26 29 30 33 34 41 42 43 44 50 51 52 53 54 55 56 57 57 58 58 61 66 67 68 68 69 69 69 76 77 80 82 83 84
STRIPS_KEY           : 16
TYPES_KEY            : 21
TYPING_KEY           : 18
VARIABLE             : 83 83 86 86 90 91
WHEN_KEY             : 65 67 69 77
error                : 

Nonterminals, with rules where they appear

action_def           : 39 40
action_def_lst       : 3 4 39
atomic_eff           : 65 67 68 69 72 73 77
atomic_eff_lst       : 64 66 72
constant             : 35 36
constants_def        : 3
constants_lst        : 33 35 37 38
domain               : 1
domain_def           : 3 4
domain_pdef          : 5
effects_def          : 41
formula              : 44 48 49 49 50 51 54 55 55 57 58 59 60 65 67 69 77
formula_lst          : 46 47 52 53 59
goal_def             : 5
ground_predicate     : 31 32
ground_predicates_lst : 10 11 12 31
init_def             : 5
literal              : 45 56 62 74 78 79
literal_lst          : 75 76 78
names_lst            : 21 23 24
objects_def          : 5
one_eff_formula      : 61 70 71
one_eff_formula_lst  : 63 70
parameters_def       : 41
pddl                 : 0
precond_def          : 41
predicate            : 80 81
predicate_def        : 27 28
predicate_def_lst    : 26 27
predicates_def       : 3 4
problem              : 2
problem_def          : 5
require_def          : 3 4
require_key          : 14 15
require_key_lst      : 13 14
type                 : 37 38 88 89
typed_constants_lst  : 9 22 37
typed_variables_lst  : 29 42 50 51 57 58 68 69 88
types_def            : 3 4
variables_lst        : 82 85 88 89 90

Parsing method: LALR

state 0

    (0) S' -> . pddl
    (1) pddl -> . domain
    (2) pddl -> . problem
    (3) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
    (4) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
    (5) problem -> . LPAREN DEFINE_KEY problem_def domain_pdef objects_def init_def goal_def RPAREN

    LPAREN          shift and go to state 4

    pddl                           shift and go to state 1
    domain                         shift and go to state 2
    problem                        shift and go to state 3

state 1

    (0) S' -> pddl .



state 2

    (1) pddl -> domain .

    $end            reduce using rule 1 (pddl -> domain .)


state 3

    (2) pddl -> problem .

    $end            reduce using rule 2 (pddl -> problem .)


state 4

    (3) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
    (4) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
    (5) problem -> LPAREN . DEFINE_KEY problem_def domain_pdef objects_def init_def goal_def RPAREN

    DEFINE_KEY      shift and go to state 5


state 5

    (3) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
    (4) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def predicates_def action_def_lst RPAREN
    (5) problem -> LPAREN DEFINE_KEY . problem_def domain_pdef objects_def init_def goal_def RPAREN
    (7) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN
    (8) problem_def -> . LPAREN PROBLEM_KEY NAME RPAREN

    LPAREN          shift and go to state 6

    domain_def                     shift and go to state 7
    problem_def                    shift and go to state 8

state 6

    (7) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN
    (8) problem_def -> LPAREN . PROBLEM_KEY NAME RPAREN

    DOMAIN_KEY      shift and go to state 9
    PROBLEM_KEY     shift and go to state 10


state 7

    (3) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def constants_def predicates_def action_def_lst RPAREN
    (4) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def predicates_def action_def_lst RPAREN
    (13) require_def -> . LPAREN REQUIREMENTS_KEY require_key_lst RPAREN

    LPAREN          shift and go to state 11

    require_def                    shift and go to state 12

state 8

    (5) problem -> LPAREN DEFINE_KEY problem_def . domain_pdef objects_def init_def goal_def RPAREN
    (6) domain_pdef -> . LPAREN DOMAIN_PKEY NAME RPAREN

    LPAREN          shift and go to state 13

    domain_pdef                    shift and go to state 14

state 9

    (7) domain_def -> LPAREN DOMAIN_KEY . NAME RPAREN

    NAME            shift and go to state 15


state 10

    (8) problem_def -> LPAREN PROBLEM_KEY . NAME RPAREN

    NAME            shift and go to state 16


state 11

    (13) require_def -> LPAREN . REQUIREMENTS_KEY require_key_lst RPAREN

    REQUIREMENTS_KEY shift and go to state 17


state 12

    (3) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def constants_def predicates_def action_def_lst RPAREN
    (4) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def predicates_def action_def_lst RPAREN
    (21) types_def -> . LPAREN TYPES_KEY names_lst RPAREN

    LPAREN          shift and go to state 18

    types_def                      shift and go to state 19

state 13

    (6) domain_pdef -> LPAREN . DOMAIN_PKEY NAME RPAREN

    DOMAIN_PKEY     shift and go to state 20


state 14

    (5) problem -> LPAREN DEFINE_KEY problem_def domain_pdef . objects_def init_def goal_def RPAREN
    (9) objects_def -> . LPAREN OBJECTS_KEY typed_constants_lst RPAREN

    LPAREN          shift and go to state 21

    objects_def                    shift and go to state 22

state 15

    (7) domain_def -> LPAREN DOMAIN_KEY NAME . RPAREN

    RPAREN          shift and go to state 23


state 16

    (8) problem_def -> LPAREN PROBLEM_KEY NAME . RPAREN

    RPAREN          shift and go to state 24


state 17

    (13) require_def -> LPAREN REQUIREMENTS_KEY . require_key_lst RPAREN
    (14) require_key_lst -> . require_key require_key_lst
    (15) require_key_lst -> . require_key
    (16) require_key -> . STRIPS_KEY
    (17) require_key -> . EQUALITY_KEY
    (18) require_key -> . TYPING_KEY
    (19) require_key -> . ADL_KEY
    (20) require_key -> . ND_KEY

    STRIPS_KEY      shift and go to state 27
    EQUALITY_KEY    shift and go to state 28
    TYPING_KEY      shift and go to state 29
    ADL_KEY         shift and go to state 30
    ND_KEY          shift and go to state 31

    require_key_lst                shift and go to state 25
    require_key                    shift and go to state 26

state 18

    (21) types_def -> LPAREN . TYPES_KEY names_lst RPAREN

    TYPES_KEY       shift and go to state 32


state 19

    (3) domain -> LPAREN DEFINE_KEY domain_def require_def types_def . constants_def predicates_def action_def_lst RPAREN
    (4) domain -> LPAREN DEFINE_KEY domain_def require_def types_def . predicates_def action_def_lst RPAREN
    (22) constants_def -> . LPAREN CONSTANTS_KEY typed_constants_lst RPAREN
    (23) constants_def -> . LPAREN CONSTANTS_KEY names_lst RPAREN
    (26) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN

    LPAREN          shift and go to state 33

    constants_def                  shift and go to state 34
    predicates_def                 shift and go to state 35

state 20

    (6) domain_pdef -> LPAREN DOMAIN_PKEY . NAME RPAREN

    NAME            shift and go to state 36


state 21

    (9) objects_def -> LPAREN . OBJECTS_KEY typed_constants_lst RPAREN

    OBJECTS_KEY     shift and go to state 37


state 22

    (5) problem -> LPAREN DEFINE_KEY problem_def domain_pdef objects_def . init_def goal_def RPAREN
    (10) init_def -> . LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (11) init_def -> . LPAREN INIT_KEY ground_predicates_lst RPAREN

    LPAREN          shift and go to state 38

    init_def                       shift and go to state 39

state 23

    (7) domain_def -> LPAREN DOMAIN_KEY NAME RPAREN .

    LPAREN          reduce using rule 7 (domain_def -> LPAREN DOMAIN_KEY NAME RPAREN .)


state 24

    (8) problem_def -> LPAREN PROBLEM_KEY NAME RPAREN .

    LPAREN          reduce using rule 8 (problem_def -> LPAREN PROBLEM_KEY NAME RPAREN .)


state 25

    (13) require_def -> LPAREN REQUIREMENTS_KEY require_key_lst . RPAREN

    RPAREN          shift and go to state 40


state 26

    (14) require_key_lst -> require_key . require_key_lst
    (15) require_key_lst -> require_key .
    (14) require_key_lst -> . require_key require_key_lst
    (15) require_key_lst -> . require_key
    (16) require_key -> . STRIPS_KEY
    (17) require_key -> . EQUALITY_KEY
    (18) require_key -> . TYPING_KEY
    (19) require_key -> . ADL_KEY
    (20) require_key -> . ND_KEY

    RPAREN          reduce using rule 15 (require_key_lst -> require_key .)
    STRIPS_KEY      shift and go to state 27
    EQUALITY_KEY    shift and go to state 28
    TYPING_KEY      shift and go to state 29
    ADL_KEY         shift and go to state 30
    ND_KEY          shift and go to state 31

    require_key                    shift and go to state 26
    require_key_lst                shift and go to state 41

state 27

    (16) require_key -> STRIPS_KEY .

    STRIPS_KEY      reduce using rule 16 (require_key -> STRIPS_KEY .)
    EQUALITY_KEY    reduce using rule 16 (require_key -> STRIPS_KEY .)
    TYPING_KEY      reduce using rule 16 (require_key -> STRIPS_KEY .)
    ADL_KEY         reduce using rule 16 (require_key -> STRIPS_KEY .)
    ND_KEY          reduce using rule 16 (require_key -> STRIPS_KEY .)
    RPAREN          reduce using rule 16 (require_key -> STRIPS_KEY .)


state 28

    (17) require_key -> EQUALITY_KEY .

    STRIPS_KEY      reduce using rule 17 (require_key -> EQUALITY_KEY .)
    EQUALITY_KEY    reduce using rule 17 (require_key -> EQUALITY_KEY .)
    TYPING_KEY      reduce using rule 17 (require_key -> EQUALITY_KEY .)
    ADL_KEY         reduce using rule 17 (require_key -> EQUALITY_KEY .)
    ND_KEY          reduce using rule 17 (require_key -> EQUALITY_KEY .)
    RPAREN          reduce using rule 17 (require_key -> EQUALITY_KEY .)


state 29

    (18) require_key -> TYPING_KEY .

    STRIPS_KEY      reduce using rule 18 (require_key -> TYPING_KEY .)
    EQUALITY_KEY    reduce using rule 18 (require_key -> TYPING_KEY .)
    TYPING_KEY      reduce using rule 18 (require_key -> TYPING_KEY .)
    ADL_KEY         reduce using rule 18 (require_key -> TYPING_KEY .)
    ND_KEY          reduce using rule 18 (require_key -> TYPING_KEY .)
    RPAREN          reduce using rule 18 (require_key -> TYPING_KEY .)


state 30

    (19) require_key -> ADL_KEY .
